--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
   </div>
   
   <!-- Scripts at the end avoid need for dealing with async, defer, or onload event handlers -->
+  <script src="lib/d3.v4/d3.v4.js"></script>
   <script src="js/visualization.js"></script>
   <script src="js/bar_chart.js"></script>
   <script src="js/line_chart.js"></script>
