--- a/index.html
+++ b/index.html
@@ -204,11 +204,99 @@
 
     <h1>Design Process</h1>
 
-    <p><em>Sketches and design choices to justify final visualization.</em></p>
+    <p><b>Sidney La Fontaine Visualizations</b></p>
 
-    <p><em>Expectation: Evidence of iterative improvement.
-    Logical discussion of design choices grounded in theory from course.
-    Discusses feedback from usability testing.</em></p>
+    <p><em>Visualization 1</em></p>
+
+    <img src='images/visualization1.png'>
+
+    <p>This visualization contains 3 different individual visualizations, the top one compares type of food a buyer is seeking (x-axis) and goal for how much product a buyer wants sources locally (y-axis), the middle one compares the changing in the desired wholesaling for a vendor (y-axis) and the type of product a vendor produces(x-axis), and the bottom one shows how many vendors have a trade relationship and how many do not. I used color to distinguish data from buyers, blue, to vendors, orange, and I would link the data based on the type of product. This visualization addresses: identity what type of food vendors produce, identify buyers’ food type needs, identify quantity buyers can buy (in percent), identify quantity vendors can produce/sell (in percent), and illustrates how many vendors do and do not have trade relationships.</p>
+
+    <p><em>Visualization 2</em></p>
+
+    <img src='images/visualization2.png'>
+
+    <p>This visualization contains 2 different individual visualizations, the top one compares type of business a buyer is (x-axis) and goal for how much product a buyer wants sources locally (y-axis), the bottom one compares the changing in the desired wholesaling for a vendor (y-axis) and the type of business a vendor wants to sell to(x-axis). I used color to distinguish data from buyers, blue, to vendors, green, and I would link the data based on the type of business. This visualization addresses: how much more vendors want to sell to different types of businesses, what percent of total food different types of businesses want to source local food for, and hopefully the connection between these two needs.</p>
+
+    <p><em>Visualization 3</em></p>
+
+    <img src='images/visualization3.png'>
+
+    <p>This visualization contains 3 different individual visualizations, the top left one compares whether a vendor has a trade relationship (x-axis) and percent change in the desired wholesaling (y-axis), the top right one compares the difference in the volume capable and actually produced by a vendor (y-axis) and the season of the year (x-axis), and contains separate lines for vendors that do and do not have a trade relationship, and the bottom one shows how many vendors have a trade relationship and how many do not. I used color to distinguish data from vendors that do and do not have a trade relationship, and I would link the data based on whether a vendor does and does not have a trade relationship. This visualization addresses: identify the difference in quantity, both in pallets and percent, vendors can produce and do produce, and how many vendors already have a trade relationship.</p>
+
+    <p><b>Rahul Suryadevara Visualizations</b></p>
+
+    <p><em>Visualization 4</em></p>
+
+    <img src='images/visualization4.jpg'>
+
+    <p>I chose a bar graph to compare the quantity of food the buyer wants to purchase locally with the quantity of that food the vendor wants to sell locally. The dropdown allows the user to compare information of different buyers and vendors, and the tabla allows the user to dynamically change what season is being represented on the bar graph (vendor quantities vary seasonably). Mark: bars, Channels: height, color. Tasks addressed: all tasks (buyer/vendor food availability/needs).</p>
+
+    <p><em>Visualization 5</em></p>
+
+    <img src='images/visualization5.jpg'>
+
+    <p>The rightside table shows zipcodes, which highlights the buyers in the leftside table that are located in that zipcode. The selection dynamically brings up pie charts (one for each buyer) depicting the quantity of each food type that the buyer needs. The area channel shows quantity, and the color channel identifies the food category. This visualization is intended to be used by vendors, and accomplishes the tasks of identifying buyer food type and quantity needs.</p>
+
+    <p><em>Visualization 6</em></p>
+
+    <img src='images/visualization6.jpg'>
+
+    <p>The rightside table allows the user to select the vendor(s) to show which buyer types those vendors cater to (collectively). The channel representing association is color (teal), and red represents a selected buyer. A barchart for the selected buyer displays the food category quantities it needs, compared to how much the vendor produces. The user can cycle through graphs of all vendors that can sell to the selected buyer (based on type). The bar mark represents quantity. This visualization addresses all tasks (buyer/vendor food availability/needs).</p>
+
+    <p><b>Eric Downing Visualizations</b></p>
+
+    <p><em>Visualization 7</em></p>
+
+    <img src='images/visualization7.jpg'>
+
+    <p>For this visualization, the top chart shows the number of buyers in each type of business, while the bottom chart shows the number of vendors who want to sell to each type of business. Color is used to distinguish buyers and vendors. Linking would be achieved by highlighting the bars in both graphs representing a buyer type when it is selected in one of the graphs. This visualization can help determine what types of buyers are not represented well by vendors</p>
+
+    <p><em>Visualization 8</em></p>
+
+    <img src='images/visualization8.jpg'>
+
+    <p>For this visualization, the top chart shows which buyers belong to what type, and which buyers are seeking which product, simultaneously. The bottom chart shows the same, but for vendors. Once again, color is used to distinguish buyers and vendors. This visualization can help match vendors and buyers together, as buyers and vendors with similar, or ideally the same, coordinates in the graphs would make a good pairing. When a point on one graph is selected, the corresponding point on the other is too, allowing one to see any potential overlap.</p>
+
+    <p><em>Visualization 9</em></p>
+
+    <img src='images/visualization9.jpg'>
+
+    <p>For this visualization, the top chart shows how much of each product vendors are able to produce in each season, while the bottom chart shows the percentage buyers want to locally source for each type of product. Again, color is used to distinguish buyers and sellers. Selecting one of the product types on one graph would be linked so that the corresponding product types on the other graph is highlighted. This visualization allows buyers to see how their product needs compare to supply, not just on an overall basis, but throughout the year.</p>
+
+    <p><b>Alex Shaw Visualizations</b></p>
+
+    <p><em>Visualization 10</em></p>
+
+    <img src='images/visualization10.jpg'>
+
+    <p>This visualization seeks to improve the SNB’s current method of displaying buyer information, which is essentially just a list of hyperlinks. I wanted to use a simple graphic, large interactive percentages. If we are able to receive the names tied to buyer survey responses, then the percentage of buyers seeking x, can be linked to the url of said buyers.</p>
+
+    <p><em>Visualization 11</em></p>
+
+    <img src='images/visualization11.jpg'>
+
+    <p>This visualization makes use of the zip codes collected in the vender survey. We can link the quantities of pallets of particular food categories back to the original zip code, emphasizing the locality of the SBN trade show. Only problem is that some of the vendor survey data on produce volume is aggregated, so we might not be able to categorize in this manner.</p>
+
+    <p><em>Visualization 12</em></p>
+
+    <img src='images/visualization12.jpg'>
+
+    <p>This visualization was inspired by a graphic used by farmer’s markets. If we do some dataset cleaning, then we can separate each individual item that the vendors plan on bringing to the trade show. I do not know how we would order these items, maybe alphabetized. Then, we map item’s zip code and calculate the average distance traveled for all salsas to Northeastern university from the center of said zip code. On the right side of the graphic, we can display a cartoon of the food item with a clickable window to show the detail of our chosen category, including potential information like the type of businesses that produce mushrooms or the urls to their website (if we can get this).</p>
+
+    <p><b>Top 3 Visualizations</b></p>
+
+    <p>We choose visualization 2, 4, and 5. Visualization 2 contains 2 different individual visualizations, the top one compares type of business a buyer is (x-axis) and goal for how much product a buyer wants sources locally (y-axis), the bottom one compares the changing in the desired wholesaling for a vendor (y-axis) and the type of business a vendor wants to sell to(x-axis). I used color to distinguish data from buyers, blue, to vendors, green, and I would link the data based on the type of business. This visualization addresses: how much more vendors want to sell to different types of businesses, what percent of total food different types of businesses want to source local food for, and hopefully the connection between these two needs. We particularly liked this visualization because it’s easy to follow and makes a lot of conceptual sense while also being informative and satisfying multiple tasks at once. It especially shows potential partnerships between different types of buyers and vendors.</p>
+
+    <p>We chose visualization 4 because it juxtaposes data on the buyer and vendor to allow the user to make direct comparisons on the quantity of food, by category, that the buyer wants to buy and vendor wants to sell. An interactive component is included to allow the user to dynamically update the visualization based on the chosen buyer/vendor. This allows the user to make comparisons across all the available buyers and vendors in the database. The table on the right lists the four seasons along with quantity of food that the vendor can produce per season. This allows the buyer to make decisions on which vendor is best suited for which season. Color is used to distinguish buyer from vendor, and the bar mark depicts quantities. The current provided data does not suffice to make this visualization, however, because we require at a minimum the names of the buyers and vendors, and furthermore the quantities the buyers and vendors are buying/selling. The quantity of food produced by vendors (overall) per season is available, but this should also exist for buyers, and per category (for a more effective comparison). This visualization addresses all four tasks listed.</p>
+
+    <p>Visualization 5 consists of three components: a table of zipcodes, a table of buyers with their business type and food categories demanded, and a pie chart summarizing the quantity demanded per food category for the selected buyer(s). This visualization allows a user to select a zipcode and see which buyer(s) is located in that zipcode (i.e. to inform them which organizations are closer), and also highlights their business type. The dataset mentioned that vendors are looking to cater to certain business types. Finally, based on the number of buyers highlighted, pie charts appear with the relative quantities each buyer needs for their required food categories. This would allow the vendor to determine which buyer is a better partner for them. The area channel depicts quantity, and color channel depicts category. Again, data on the quantity of food needed for each buyer is required. This visualization addresses the tasks of determining what kind of food and quantity the buyer requires. We chose this visualization because it has a simple implementation for location filtering, as well as easy-to-spot results that would help inform vendors’ decisions.</p>
+
+    <p><b>Final Visualization Decision</b></p>
+
+    <p>The visualization we decided to implement was visualization 6 (see above). This visualization is actually not one of our three top choices from Project Assignment 4. After further critical examination of our visualizations this week, we decided that despite this, visualization 3 is just as informative as our top picks, while also being more straightforward to both implement and understand. Additionally, the data availability was too limited to implement our top designs, whereas visualization 3 uses data that has already been provided. Because of this, we decided to choose visualization 3 over visualizations 2, 4, and 5, which were our original top three picks.</p>
+
+    <p>We wanted our visualization to encourage potential buyers to attend the Trade Show, and are browsing the website to see if the trade show is a productive use of their time. Our visualization draws three conclusions by summarizing survey data: desire of vendors to find new trade partners and make larger wholesalers, volume that vendors can produce at the moment, and a map of containing vendor’s zip codes. Connecting these three ideas will encourage potential buyers visiting the website to join the trade show, where finding new partners will be very efficient.</p>
 
 
     <h1>Conclusion</h1>
