--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
 
     <h1>Conclusion</h1>
 
-    <p><em>Short summary of work completed and areas for improvement/future-work.</em></p>
+    <p><em>This project allows SBN to refer to an online visualization to aid buyers in determining whether it is worth their while to attend he Local Foods Trade Show. Our visualization tells a story of vendor's desires to increase wholesale production as well as the capcity to do so. The products produced are available in the details on demand through the map, and the mission of SBN to support local food consumption is highlighted there as well. We accomplished these tasks by cleaning survey data, aggregating infomration in to usful bins like vendor capacity to produce crops during the winter, and cerating visualizations that encourages the user to explore the connection between vednors with or without a trade relationship. </em></p>
 
-    <p><em>Expectation: Meaningfully wraps up project and has good future directions.</em></p>
+    <p><em>Due to the annonymity of our dataset, the group was limited in our ability to link urls and more detailed vendor information. We recommend that SBN continue surveying its trade show participants with identifying informtation and for the next group of data scientists to incorporate more interactivity with this increase of information.</em></p>
 
 
     <h1>Acknowledgments</h1>
