--- a/index.html
+++ b/index.html
@@ -88,6 +88,32 @@
 
     <p><em>Final visualization screenshots (PNG images), design justifications, UI walk-through, and linked presentation slides.</em></p>
 
+    <p><strong><u>Design Justification</u></strong></p>
+    <p>The essence of this visualization is to show buyers and vendors that there is an advantage in establishing a trade relationship. For vendors, this is inidicated by the seasonal quantities produced, where higher production correlates to more business and outreach. For buyers, the bar chart implies that vendors without trade relationships have more opportunity, therefore desire, to increase their wholesaling. This indicates to buyers that there are vendors looking for more outlets. This is where the map comes in, a visualization that informs the buyer which vendors meet their food type needs (along with their trade relation status). </p>
+    <p><u>Line Chart</u></p>
+    The two lines represent vendors with and without a trade relationship, with color coding to indicate this. For this visualization, we took the average production of vendors per season. This will immediately tell buyers which vendors (ones with trade relations or not) to seek based on their quantity needs per season. This also generally indicates to vendors that having trade relationships increases their production. We have enabled points on the line chart which the user can hover over to see the exact quantity. The user can select a line, which increases its opacity, and this selects all data points acorss the visualization that indicate vendors with the same trade relation status.
+    <p><u>Bar Chart</u></p>
+    The two bars represent vendors with and without trade relationship, with color coding to indicate this. For this visualization, we took the average desired percent increase in wholesaling for vendors (based on trade relationship). The numbers on top of the bars make it easier to interpret the chart, and the juxtaposition of the two bars clearly shows that there is opportunity in establishing trade relationships with vendors: increased wholesaling. The user can select a bar, which increases its opacity, and this selects all data points acorss the visualization that indicate vendors with the same trade relation status.
+    <p><u>Map</u></p>
+    The points indicate zipcodes, which include all the vendors present in that zipcode. If there vendors in the same zipcode with a different trade relation, they are given a separate point (by modifying the latitude and longitude values very slightly). This enables the points to be color coded based on trade relationship status. The user can hover over a point for details on demand: the food produced and zipcode. Because there may be multiple vendors associated with a zipcode, the food items of the vendors are concatenated. The user can select a point, which increases its opacity, and this selects all data points acorss the visualization that indicate vendors with the same trade relation status.
+
+    <p><strong><u>UI Walk-through</u></strong></p>
+    The user may interact with any visualization to start with. For the line chart, the user may hover over the lines to get the exact quantities produced. The user can select a line (with trade relation, for example) to highlight (by increasing opacity) all the points on the map and corresponding bar with the same trade relation status. The bar chart has similar functionality, as this linking goes both ways. For the map, the user can hover over a point to see which zipcode it corresponds to and what food items are produced. The user can select a point to get all the data on the visualization higlighted (increased opacity) with the same trade relation status; this will not highlight the other points on the map, jus the line and bar with the same trade relation status.
+
+    <p><strong>[INSERT SCREENSHOT OF DEFAULT VISUALIZATION]</strong></p>
+    <p>In the image above, our visualization is at its defualt state (no user interaction). </p>
+
+    <p><strong>[INSERT SCREENSHOT OF USER HOVERING OVER A POINT ON LINE CHART]</strong></p>
+
+    <p><strong>[INSERT SCREENSHOT OF USER HIGHLIGHTING A LINE ON LINE CHART]</strong></p>
+
+    <p><strong>[INSERT SCREENSHOT OF USER HIGHLIGHTING A BAR ON BAR CHART]</strong></p>
+
+    <p><strong>[INSERT SCREENSHOT OF USER HOVERING OVER A POINT ON MAP]</strong></p>
+
+    <p><strong>[INSERT SCREENSHOT OF USER SELECTING A POINT ON MAP]</strong></p>
+
+
     <h1>Data Analysis</h1>
 
     <p>Data collection: in-person surveys collected by the Sustainable Business Network at the Local Trade Show</p>
