map table and brushing and linking not working

--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
     <div class="linechart-holder" id="linechart"></div>
     <div class="barchart-holder" id="barchart"></div>
     <div class="map-holder" id="map"></div>
+    <div id="table">
+        <table>
+            <tr>
+                <th>Zipcode</th>
+                <th>Food Types Produced</th> 
+                <th>Trade Relation Status</th> 
+            </tr>
+        </table>
+    </div>
     
 
   </div>
