--- a/index.html
+++ b/index.html
@@ -331,6 +331,21 @@
     <p>The visualization we decided to implement was visualization 6 (see above). This visualization is actually not one of our three top choices from Project Assignment 4. After further critical examination of our visualizations this week, we decided that despite this, visualization 3 is just as informative as our top picks, while also being more straightforward to both implement and understand. Additionally, the data availability was too limited to implement our top designs, whereas visualization 3 uses data that has already been provided. Because of this, we decided to choose visualization 3 over visualizations 2, 4, and 5, which were our original top three picks.</p>
 
     <p>We wanted our visualization to encourage potential buyers to attend the Trade Show, and are browsing the website to see if the trade show is a productive use of their time. Our visualization draws three conclusions by summarizing survey data: desire of vendors to find new trade partners and make larger wholesalers, volume that vendors can produce at the moment, and a map of containing vendor’s zip codes. Connecting these three ideas will encourage potential buyers visiting the website to join the trade show, where finding new partners will be very efficient.</p>
+    <p><b>Usability Test Results</b></p>
+    <p>We tested five tasks on multiple classmates in a visualization usability test. They found that the line chart points should disctint, so it can be recognized as an interaction. It is easy to tell the difference between vendors with or without a trade relationship and their capacity to produce food. This is due to the fact that brushing and linking between the map and the charts is very simple.</p>
+    <table style="width:100%">
+      <tr>
+        <th>Based on these notes, we decided to:</th>
+      </tr>
+      <tr>
+        <td>Reorientate charts and map to be stacked on top of eachother</td>
+      </tr>
+      <tr>
+        <td>Describe what having a trade relation means</td>
+      </tr>
+      <tr>
+        <td>In the write up, justify our use of brushing and linking</td>
+      </tr>
 
 
     <h1>Conclusion</h1>
