brushing and linking

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
       <div class='legend-title'>Legend</div>
       <div class='legend-scale'>
         <ul class='legend-labels'>
-          <li><span style='background:#0000ff;'></span>Has Trade Relation</li>
-          <li><span style='background:#008000;'></span>No Trade Relation</li>
+          <li><span style='background:#0000ff;'></span>Vendor Has Trade Relation With Buyer</li>
+          <li><span style='background:#008000;'></span>Vendor Does Not Have Trade Relation With Buyer</li>
+          <li><span style='background:#ff0000; opacity: 0.5'></span>Selected data</li>
         </ul>
       </div>
       </div>
