fixing image paths

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
     <p><strong><u>UI Walk-through</u></strong></p>
     The user may interact with any visualization to start with. For the line chart, the user may hover over the lines to get the exact quantities produced at specific points. The user can select a line (with trade relation, for example) to highlight (by increasing opacity) all the points on the map and corresponding bar with the same trade relation status. The bar chart has similar functionality, as this linking goes both ways. For the map, the user can brush a section of points to get more information about them in a chart next to the map (zipcode, food types produced, and trade relationship status). By brushing over those points the user will also highlight all the data with the corresponding trade relationships in the other 2 visualizations. For example, if you brush over data without a trade relationship in the map, the data in the other visualizations without a trade relationship with also be highlighted. If you brush over data with and without a trade relationship in the map, the data in the other visualizations with and without a trade relationship with also be highlighted.
     <p><strong>Default Visualization</strong></p>
-    <img src="images/defaultVis.png" alt="Default Visualization">
+    <img src="images/defaultvis.png" alt="Default Visualization">
 
      <p><strong>Hovering over a point on line chart</strong></p>
-    <img src="images/hoveringPoint.png" alt="Hovering over a point on line chart">
+    <img src="images/hoveringpoint.png" alt="Hovering over a point on line chart">
 
      <p><strong>Selecting a bar with no trade relationship</strong></p>
-    <img src="images/selectBar.png" alt="Selecting a bar with no trade relationship">
+    <img src="images/selectbar.png" alt="Selecting a bar with no trade relationship">
 
      <p><strong>Selecting a line with trade relationship</strong></p>
     <img src="images/selectLine.png" alt="Selecting a line with trade relationship">
