--- a/index.html
+++ b/index.html
@@ -47,16 +47,15 @@
 
   </div>
 
+
   <div class='instruction'><p>To interact, hover over points on the line chart, select a line or bar, brush over points on the map, and to deselect all press the button labeled 'Deselect All'.</p></div>
 
   <div class="deselectAll"> 
     <button class="btn btn-info btn-sm" id='deselect' onclick="deselectAll()">Deselect All</button> 
   </div>
-  <!-- Your visualization here -->
-  <div class="vis-holder">
-    <!-- Change viewbox to whatever you want, e.g. "0 0 1000 6000" This determines your aspect ratio and coordinate system -->
-    <!-- Delete all the sample SVG code below after the viewbox to before the closing tag. Populate this part of the SVG with D3. -->
 
+  <div class="vis-holder">
+  
     <div class="linechart-holder" id="linechart"></div>
     <div class="barchart-holder" id="barchart"></div>
     <div class="legend-holder" id="legend">
@@ -102,9 +101,8 @@
     <p><em>Embedded MP4 demo video using the HTML5 &lt;video&gt; tag. For example, this screen recording Prof. Cody Dunne made of Mike Bostock's flexible transitions in D3 slide:</em></p>
 
     <video controls width="100%">
-      <source src="http://www.ccs.neu.edu/home/cody/courses/shared/d3-flexible-transitions.mp4" type="video/mp4">
-      <p>Your browser doesn't support HTML5 video. Here is
-       a <a href="http://www.ccs.neu.edu/home/cody/courses/shared/d3-flexible-transitions.mp4">link to the video</a> instead.</p>
+       <source src="demo/Final Demo.mp4" type="video/mp4">
+
     </video>
 
     <h1>Visualization explanation</h1>
