--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <p><em>Embedded MP4 demo video using the HTML5 &lt;video&gt; tag. For example, this screen recording Prof. Cody Dunne made of Mike Bostock's flexible transitions in D3 slide:</em></p>
 
     <video controls width="100%">
-       <source src="demo/Final Demo.mp4" type="video/mp4">
+       <source src="files/Final Demo.mp4" type="video/mp4">
 
     </video>
 
